--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 
 			<div class="col-lg-4  col-md-4  col-12 mt-5">
-				<div class="row">
+				<div class="Prow">
 					<div class="col-lg-4 col-md-4 col-12 ">
 						<figure>
 							<img src="images/quarantine.png" class="img-fluid" width="90" height="90">
@@ -327,11 +327,11 @@
 </div>
 <!-- *********************************** footer part ****************** -->
 
-<footer class="mt-5">
+<!-- <footer class="mt-5">
 	<div class=" footer_style bg-dark text-white container-fluid text-center">
 		<p>Copyright by CodeWing</p>
 	</div>
-</footer>
+</footer>-->
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" integrity="sha256-jDnOKIOq2KNsQZTcBTEnsp76FnfMEttF6AV2DF2fFNE=" crossorigin="anonymous"></script>
