--- a/index.html
+++ b/index.html
@@ -326,12 +326,11 @@
 	<i class="fa fa-arrow-up"  onclick="topFunction()" id="myBtn" > </i> 
 </div>
 <!-- *********************************** footer part ****************** -->
-
-<!-- <footer class="mt-5">
+<footer class="mt-5">
 	<div class=" footer_style bg-dark text-white container-fluid text-center">
 		<p>Copyright by CodeWing</p>
 	</div>
-</footer>-->
+</footer>
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" integrity="sha256-jDnOKIOq2KNsQZTcBTEnsp76FnfMEttF6AV2DF2fFNE=" crossorigin="anonymous"></script>
